--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,16 @@
-Options +SymLinksIfOwnerMatch
+<IfModule mod_rewrite.c>
+Options +FollowSymLinks
 RewriteEngine On
 
-# Allow Installatron requests
-RewriteCond %{REQUEST_FILENAME} deleteme\.\w+\.php
-RewriteRule (.*) - [L]
+RewriteCond %{REQUEST_URI} !^/public/
 
-RewriteRule ^ index.php [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+
+
+
+RewriteRule ^(.*)$ /public/$1
+#RewriteRule ^ index.php [L]
+RewriteRule ^(/)?$ public/index.php [L]
+</IfModule>
+
